[gd_scene load_steps=12 format=3 uid="uid://cktpqc07o33bh"]

[ext_resource type="Script" path="res://scripts/door_component.gd" id="1_8pclt"]
[ext_resource type="Texture2D" uid="uid://ckocp70if2yx7" path="res://assets/inside/wooden_door_b.png" id="1_mkn1x"]
[ext_resource type="FontFile" uid="uid://cyck5pt62xg6p" path="res://assets/KIN668.TTF" id="3_xn3ju"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wni5a"]
size = Vector2(28.5, 9)

[sub_resource type="Animation" id="Animation_p5pwd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_dm1jx"]
resource_name = "close"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="Animation" id="Animation_6i6ok"]
resource_name = "open"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_136le"]
_data = {
"RESET": SubResource("Animation_p5pwd"),
"close": SubResource("Animation_dm1jx"),
"open": SubResource("Animation_6i6ok")
}

[sub_resource type="Theme" id="Theme_a58vs"]
default_font = ExtResource("3_xn3ju")
default_font_size = 10

[sub_resource type="Theme" id="Theme_tmlgt"]
default_font = ExtResource("3_xn3ju")
default_font_size = 10

[sub_resource type="Theme" id="Theme_8p7ed"]
default_font = ExtResource("3_xn3ju")
default_font_size = 10

[node name="DoorComponent" type="Area2D"]
z_index = 2
script = ExtResource("1_8pclt")

[node name="Texture" type="Sprite2D" parent="."]
texture = ExtResource("1_mkn1x")
hframes = 2

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0.25, 14)
shape = SubResource("RectangleShape2D_wni5a")

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_136le")
}

[node name="Exit" type="CanvasLayer" parent="."]
visible = false
offset = Vector2(190, 100)
transform = Transform2D(1, 0, 0, 1, 190, 100)

[node name="ExitButton" type="Button" parent="Exit"]
offset_left = 10.0
offset_top = 28.0
offset_right = 67.0
offset_bottom = 52.0
theme = SubResource("Theme_a58vs")
text = "Sair"

[node name="CancelButton" type="Button" parent="Exit"]
offset_left = -70.0
offset_top = 28.0
offset_right = -13.0
offset_bottom = 52.0
theme = SubResource("Theme_tmlgt")
text = "Cancelar"

[node name="Text" type="TextEdit" parent="Exit"]
offset_left = -86.0
offset_top = -36.0
offset_right = 90.0
offset_bottom = -5.0
theme = SubResource("Theme_8p7ed")
text = "Deseja reiniciar o jogo?"
editable = false

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="Animation" to="." method="_on_animation_finished"]
[connection signal="pressed" from="Exit/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Exit/CancelButton" to="." method="_on_cancel_button_pressed"]
